@@ -1,1 +1,9 @@
-PROJECTNAME = "reflex"
+PROJECTNAME = "Reflecto"
+
+try:
+    import Products.CacheSetup
+except ImportError:
+    HAS_CACHESETUP = False
+else:
+    HAS_CACHESETUP = True
+
